tests/diagnostics/catalog/snapshots/ir/IR0003.snap
error[IR0003]: IR_E_ARGUMENT_MISMATCH
 --> tests/diagnostics/catalog/sources/ir/IR0003.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0003
  = help: keep IR validation diagnostics structured and catalog-backed
